# knull

./: .gitignore  BUILD.md  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MANIFESTO.md  Makefile  PROJECT_DOCUMENTATION.md  README.md  USAGE.md  install.sh  knull.toml  test2.knull  test_all.sh  test_fn.knull  test_simple.knull  test_str.knull  uninstall.sh
.github/workflows/: release.yml
bootstrap/: Cargo.toml
bootstrap/src/: ast.rs  ccodegen.rs  codegen.rs  compiler.rs  lexer.rs  lsp.rs  lsp_main.rs  main.rs  parser.rs
compiler/: IR.md
docs/: EXPERT_MODE.md  GOD_MODE.md  GUIDE.md  LIBRARY_INDEX.md  NEW_FEATURES.md  NOVICE_MODE.md  SPECIFICATION.md  STD_LIB.md  TOOLCHAIN.md
docs/TUTORIALS/: ffi.md  networking.md  web_server.md
editor/: language-configuration.json  package.json
editor/syntaxes/: knull.tmLanguage.json
examples/: adventure_game.knull  ascii_art.knull  audio_synth.knull  benchmark.knull  bootloader.knull  brainfuck_compiler.knull  calculator.knull  capability_test.knull  complete_demo.knull  comprehensive.knull  crypto_demo.knull  crypto_fs_test.knull  crypto_pro.knull  demo_hack.knull  demo_script.knull  demo_web.knull  embedded_blink.knull  encoding_test.knull  ffi_demo.knull  fibonacci.knull  file_io_demo.knull  financial_model.knull  functional.knull  functional_test.knull  game_of_life.knull  gc_demo.knull  graph_demo.knull  guessing_game.knull  gui_framework.knull  hello_world.asm  hello_world.knull  json_demo.knull  linalg_demo.knull  math_demo.knull  mega_test.knull  micro_kernel.knull  network_demo.knull  new_features.knull  os_kernel.knull  patterns.knull  (+30 more)
examples/db/: knulldb.knull  todo_app.knull
examples/games/: breakout.knull  pong.knull  snake.knull
examples/os/: boot_sector.knull  microkernel.knull
pkg/: Manifest.md  resolver.rs
runtime/: builtins.knull  net.knull  std.knull  sys.knull
self_hosted/: codegen.knull  knullc.knull  knullc_simple.knull  lexer.knull  minimal.knull  output  output.c  parser.knull  test_module.knull  test_return.knull  test_struct.knull
src/: Cargo.toml  ast.rs  c_codegen.rs  cli.rs  compiler.rs  comptime.rs  concurrency.rs  debugger.rs  doc.rs  effects.rs  ffi.rs  ffi_complete.rs  gc.rs  generics.rs  incremental.rs  interpreter.rs  jit.rs  lexer.rs  linear_check.rs  llvm_codegen.rs  lsp.rs  macros.rs  main.rs  memory.rs  optimize.rs  ownership.rs  parser.rs  pkg.rs  type_system.rs  wasm_codegen.rs
src/memory/: allocators.rs  pools.rs  rc.rs  regions.rs  zero_copy.rs
src/optimize/: analysis.rs  constants.rs  loops.rs  mod.rs  simd.rs
src/pkg/: http_registry.rs  local_registry.rs  lockfile.rs  manager.rs  mod.rs  semver.rs
src/runtime/: allocators.rs  asm.rs  async_rt.rs  coroutine.rs  io.rs  mem.rs  mod.rs  net.rs  syscall.rs  thread.rs
src/std/: collections.rs  crypto.knull  io.knull  io.rs  mem.knull  mod.rs  net.knull  prelude.knull  string.rs  sys.knull  sys.rs
stdlib/: README.md  test.knull
stdlib/ai/: ml.knull
stdlib/async/: async.knull
stdlib/collections/: collections.knull
stdlib/core/: core.knull
stdlib/crypto/: blockchain.knull  crypto.knull  security.knull
stdlib/db/: database.knull  sqlite.knull
stdlib/embedded/: gpio.knull  kernel.knull  mmap.knull  nostd.knull  runtime.knull
stdlib/game/: engine.knull  physics.knull  sprite.knull
stdlib/gui/: draw.knull  framework.knull  sdl2.knull
stdlib/io/: io.knull  io_pure.knull
stdlib/json/: json.knull
stdlib/math/: math.knull
stdlib/mem/: allocators.knull  memory.knull
stdlib/net/: http_client.knull  http_parser.knull  http_response.knull  net.knull  net_pure.knull  network.knull  router.knull  websocket.knull
stdlib/runtime/: runtime.knull
stdlib/string/: string.knull
stdlib/sys/: syscall.knull
stdlib/thread/: concurrency.knull  coroutine.knull
stdlib/wasi/: wasi.knull
syntax/: knull.configuration.json  knull.tmLanguage.json
tests/: test_main.knull  test_memory.knull  test_sys.knull
