[package]
name = "knull"
version = "1.0.0"
edition = "2021"
authors = ["Knull Team"]
description = "The Knull Programming Language - The God Language"
license = "MIT OR Apache-2.0"
homepage = "https://knull.dev"
repository = "https://github.com/4fqr/knull"

[[bin]]
name = "knull"
path = "src/main.rs"

[[bin]]
name = "knullc"
path = "src/main.rs"

[[bin]]
name = "knull-lsp"
path = "src/lsp_main.rs"

[features]
default = ["llvm"]
llvm = ["inkwell"]

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
tower-lsp = { version = "0.20", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
unicode-xid = "0.3"
inkwell = { version = "0.2", optional = true, features = ["llvm16-0"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "1.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
