[package]
name = "knull"
version = "1.0.0"
edition = "2021"
authors = ["Knull Team"]
description = "The Knull Programming Language - The God Language"
license = "MIT OR Apache-2.0"
homepage = "https://knull.dev"
repository = "https://github.com/knull-lang/knull"

[[bin]]
name = "knull"
path = "main.rs"

[features]
default = ["llvm-backend", "lsp"]
llvm-backend = ["dep:inkwell"]
lsp = ["dep:tower-lsp"]

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
unicode-xid = "0.2"
tower-lsp = { version = "0.20", optional = true }
inkwell = { version = "0.5", optional = true, features = ["llvm18-0"] }
colored = "2.1"
indicatif = "0.17"
libc = "0.2"
tempfile = "3.8"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
