[package]
name = "knull"
version = "1.0.0"
edition = "2021"
authors = ["Knull Team"]
description = "The Knull Programming Language - The God Language"
license = "MIT OR Apache-2.0"
homepage = "https://knull.dev"
repository = "https://github.com/4fqr/knull"

[[bin]]
name = "knull"
path = "main.rs"

[features]
default = ["llvm-backend", "lsp"]
llvm-backend = ["dep:inkwell"]
lsp = ["dep:tower-lsp"]
debugger = []

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
unicode-xid = "0.2"
tower-lsp = { version = "0.20", optional = true }
inkwell = { version = "0.5", optional = true, features = ["llvm18-0"] }
colored = "2.1"
indicatif = "0.17"
libc = "0.2"
tempfile = "3.8"
lazy_static = "1.4"
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }
flate2 = "1.0"
tar = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
libloading = "0.8"
native-tls = "0.2"
tungstenite = { version = "0.21", features = ["native-tls"] }
minifb = "0.25"

# ── Cryptography ──────────────────────────────────────────────────────────────
rand = "0.8"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rsa = { version = "0.9", features = ["sha2"] }
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
pbkdf2 = "0.12"
argon2 = "0.5"

# ── Arbitrary-precision arithmetic ────────────────────────────────────────────
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"

# ── Identifiers ───────────────────────────────────────────────────────────────
uuid = { version = "1.7", features = ["v4", "v7"] }

# ── Compression ───────────────────────────────────────────────────────────────
lz4_flex = "0.11"
zstd = "0.13"

# ── Data formats ──────────────────────────────────────────────────────────────
csv = "1.3"
quick-xml = "0.36"
serde_yaml = "0.9"

# ── Concurrency ───────────────────────────────────────────────────────────────
crossbeam-channel = "0.5"
dashmap = "5.5"
rayon = "1.10"

# ── Image processing ──────────────────────────────────────────────────────────
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico"] }

# ── Terminal / TUI ────────────────────────────────────────────────────────────
ratatui = "0.28"
crossterm = "0.28"

# ── String utilities ──────────────────────────────────────────────────────────
strsim = "0.11"

# ── Linear algebra / Scientific ───────────────────────────────────────────────
nalgebra = "0.33"
rustfft = "6.2"
ndarray = "0.15"
glam = "0.28"

# ── Graph algorithms ──────────────────────────────────────────────────────────
petgraph = "0.6"

# ── Encoding / Hashing ────────────────────────────────────────────────────────
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64", "xxh32"] }
base32 = "0.4"
bs58 = "0.5"
rmp-serde = "1.3"
bincode = "1.3"

# ── Web / Auth ────────────────────────────────────────────────────────────────
jsonwebtoken = "9.3"
handlebars = "6.0"

# ── Diff ──────────────────────────────────────────────────────────────────────
similar = "2.6"

# ── Regex (PCRE-like) ──────────────────────────────────────────────────────────
fancy-regex = "0.13"

# ── System info ───────────────────────────────────────────────────────────────
sysinfo = "0.30"

# ── File system ───────────────────────────────────────────────────────────────
walkdir = "2.5"
glob = "0.3"

# ── Iterator utilities ────────────────────────────────────────────────────────
itertools = "0.13"

# ── Audio ──────────────────────────────────────────────────────────────────────
hound = "3.5"

# ── Byte utilities ────────────────────────────────────────────────────────────
byteorder = "1.5"

# ── Ordered maps ──────────────────────────────────────────────────────────────
indexmap = "2.3"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
